--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,52 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: rgb(240, 240, 243);
+}
+
+.bg-pinky {
+  background-color: #f72585;
+  color: white;
+  border: 1px solid #f72585;
+}
+h2 {
+  font-size: 2rem;
+  padding: 2vh auto;
+}
+
+p {
+  text-indent: 1rem;
+  color: rgb(41, 40, 40);
+  margin: 2vh auto;
+}
+.pinkyText {
+  color: #f72585;
+}
+
+.bg-pinkyHovered:hover {
+  background-color: white;
+  color: #f72585;
+  border: 1px solid #f72585;
+  transition: 0.3s ease-in;
+}
+
+.bg-whitePinkBorder {
+  background-color: white;
+  color: #f72585;
+  border: 1px solid #f72585;
+}
+.bg-whiteHovered:hover {
+  background-color: #f72585;
+  color: white;
+  border: 1px solid #f72585;
+  transition: 0.3s ease-in;
 }
 
 a {
@@ -13,4 +56,12 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.hiddenDiv {
+  display: none;
+  opacity: 0;
+  transition: all 0.8s linear;
+}
+.display {
+  display: block;
 }
